# force2019

./: .editorconfig  .gitattributes  .gitignore  MANIFEST.in  README-ia.md  README.md  blank.py  makefile  notes.md  old-README.md  pylintrc  setup.cfg  setup.py  some.py  tf_keras_test.ipynb
colab/: tf_keras_test.ipynb  tf_keras_test.py
extra/: setup-colab.sh
src/laicheil/force2019/: __init__.py  _version.py  cli.py  iascratch.py
