[metadata]

# https://github.com/warner/python-versioneer

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/laicheil/force2019/_version.py
versionfile_build = laicheil/force2019/_version.py
tag_prefix =
parentdir_prefix = laicheil-force2019-

[tool:pytest]
testpaths = tests
addopts = --pylint

[aliases]
test=pytest
